// Vitest Snapshot v1

exports[`extractLines > should extract lines and not add ellipsis on first and last line 1`] = `
"Line 1
// ...
Line 4
Line 5
Line 6
// ...
Line 10"
`;

exports[`extractLines > should extract lines by range 1`] = `
"...
Line 2
Line 3
Line 4
..."
`;

exports[`extractLines > should extract lines with custom ellipsis 1`] = `
"Line 1
// ...
Line 4
Line 5
Line 6
// ...
Line 8
// ..."
`;

exports[`extractLines > should extract lines with gaps 1`] = `
"Line 1
...
Line 4
Line 5
Line 6
...
Line 8
..."
`;

exports[`extractLines > should extract lines with no ellipsis 1`] = `
"Line 1
Line 4
Line 5
Line 6
Line 8"
`;

exports[`extractLines > should return full content 1`] = `
"Line 1
Line 2
Line 3
Line 4
Line 5
Line 6
Line 7
Line 8
Line 9
Line 10"
`;

exports[`getDirectory > should get directory 1`] = `
{
  "directories": [
    {
      "directories": [],
      "files": [
        {
          "extension": ".json",
          "folder": "book",
          "name": "template-demo-json",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/template-demo-json.json",
            "directory": "advanced",
            "href": "/advanced/template-demo-json",
            "relative": "advanced/template-demo-json.json",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".yml",
          "folder": "book",
          "name": "template-demo-yaml",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/template-demo-yaml.yml",
            "directory": "advanced",
            "href": "/advanced/template-demo-yaml",
            "relative": "advanced/template-demo-yaml.yml",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "templates",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/templates.md",
            "directory": "advanced",
            "href": "/advanced/templates",
            "relative": "advanced/templates.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
      ],
      "folder": "book",
      "index": {
        "extension": ".md",
        "folder": "book",
        "name": "index",
        "path": {
          "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/index.md",
          "directory": "advanced",
          "href": "/advanced",
          "relative": "advanced/index.md",
        },
        "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
      },
      "name": "advanced",
      "path": {
        "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced",
        "relative": "advanced",
      },
      "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
    },
    {
      "directories": [],
      "files": [
        {
          "extension": ".md",
          "folder": "book",
          "name": "book",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/book.md",
            "directory": "configuration",
            "href": "/configuration/book",
            "relative": "configuration/book.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "library",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/library.md",
            "directory": "configuration",
            "href": "/configuration/library",
            "relative": "configuration/library.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "page",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/page.md",
            "directory": "configuration",
            "href": "/configuration/page",
            "relative": "configuration/page.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "section",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/section.md",
            "directory": "configuration",
            "href": "/configuration/section",
            "relative": "configuration/section.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
      ],
      "folder": "book",
      "index": {
        "extension": ".md",
        "folder": "book",
        "name": "index",
        "path": {
          "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/index.md",
          "directory": "configuration",
          "href": "/configuration",
          "relative": "configuration/index.md",
        },
        "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
      },
      "name": "configuration",
      "path": {
        "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration",
        "relative": "configuration",
      },
      "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
    },
    {
      "directories": [],
      "files": [
        {
          "extension": ".md",
          "folder": "book",
          "name": "alert",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/alert.md",
            "directory": "elements",
            "href": "/elements/alert",
            "relative": "elements/alert.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "archive",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/archive.md",
            "directory": "elements",
            "href": "/elements/archive",
            "relative": "elements/archive.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "bitflow",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/bitflow.md",
            "directory": "elements",
            "href": "/elements/bitflow",
            "relative": "elements/bitflow.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "bookmarks",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/bookmarks.md",
            "directory": "elements",
            "href": "/elements/bookmarks",
            "relative": "elements/bookmarks.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "collapsible",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/collapsible.md",
            "directory": "elements",
            "href": "/elements/collapsible",
            "relative": "elements/collapsible.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "download",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/download.md",
            "directory": "elements",
            "href": "/elements/download",
            "relative": "elements/download.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "emoji",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/emoji.md",
            "directory": "elements",
            "href": "/elements/emoji",
            "relative": "elements/emoji.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "excalidraw",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/excalidraw.md",
            "directory": "elements",
            "href": "/elements/excalidraw",
            "relative": "elements/excalidraw.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "glossary",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/glossary.md",
            "directory": "elements",
            "href": "/elements/glossary",
            "relative": "elements/glossary.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "math",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/math.md",
            "directory": "elements",
            "href": "/elements/math",
            "relative": "elements/math.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "mermaid",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/mermaid.md",
            "directory": "elements",
            "href": "/elements/mermaid",
            "relative": "elements/mermaid.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "protect",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/protect.md",
            "directory": "elements",
            "href": "/elements/protect",
            "relative": "elements/protect.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "qr",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/qr.md",
            "directory": "elements",
            "href": "/elements/qr",
            "relative": "elements/qr.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "scratchblock",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/scratchblock.md",
            "directory": "elements",
            "href": "/elements/scratchblock",
            "relative": "elements/scratchblock.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "snippets",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/snippets.md",
            "directory": "elements",
            "href": "/elements/snippets",
            "relative": "elements/snippets.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "struktog",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/struktog.md",
            "directory": "elements",
            "href": "/elements/struktog",
            "relative": "elements/struktog.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "tabs",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/tabs.md",
            "directory": "elements",
            "href": "/elements/tabs",
            "relative": "elements/tabs.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "youtube",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/youtube.md",
            "directory": "elements",
            "href": "/elements/youtube",
            "relative": "elements/youtube.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
      ],
      "folder": "book",
      "index": {
        "extension": ".md",
        "folder": "book",
        "name": "index",
        "path": {
          "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/index.md",
          "directory": "elements",
          "href": "/elements",
          "relative": "elements/index.md",
        },
        "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
      },
      "name": "elements",
      "path": {
        "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements",
        "relative": "elements",
      },
      "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
    },
    {
      "directories": [],
      "files": [
        {
          "extension": ".md",
          "folder": "book",
          "name": "custom",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/custom.md",
            "directory": "hosting",
            "href": "/hosting/custom",
            "relative": "hosting/custom.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "edugitpages",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/edugitpages.md",
            "directory": "hosting",
            "href": "/hosting/edugitpages",
            "relative": "hosting/edugitpages.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "ghpages",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/ghpages.md",
            "directory": "hosting",
            "href": "/hosting/ghpages",
            "relative": "hosting/ghpages.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "glpages",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/glpages.md",
            "directory": "hosting",
            "href": "/hosting/glpages",
            "relative": "hosting/glpages.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "vercel",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/vercel.md",
            "directory": "hosting",
            "href": "/hosting/vercel",
            "relative": "hosting/vercel.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
      ],
      "folder": "book",
      "index": {
        "extension": ".md",
        "folder": "book",
        "name": "index",
        "path": {
          "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/index.md",
          "directory": "hosting",
          "href": "/hosting",
          "relative": "hosting/index.md",
        },
        "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
      },
      "name": "hosting",
      "path": {
        "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting",
        "relative": "hosting",
      },
      "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
    },
    {
      "directories": [],
      "files": [
        {
          "extension": ".md",
          "folder": "book",
          "name": "code",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/code.md",
            "directory": "markdown",
            "href": "/markdown/code",
            "relative": "markdown/code.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "comment",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/comment.md",
            "directory": "markdown",
            "href": "/markdown/comment",
            "relative": "markdown/comment.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "emphasis",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/emphasis.md",
            "directory": "markdown",
            "href": "/markdown/emphasis",
            "relative": "markdown/emphasis.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "header",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/header.md",
            "directory": "markdown",
            "href": "/markdown/header",
            "relative": "markdown/header.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "hr",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/hr.md",
            "directory": "markdown",
            "href": "/markdown/hr",
            "relative": "markdown/hr.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "image",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/image.md",
            "directory": "markdown",
            "href": "/markdown/image",
            "relative": "markdown/image.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "line-break",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/line-break.md",
            "directory": "markdown",
            "href": "/markdown/line-break",
            "relative": "markdown/line-break.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "link",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/link.md",
            "directory": "markdown",
            "href": "/markdown/link",
            "relative": "markdown/link.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "list",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/list.md",
            "directory": "markdown",
            "href": "/markdown/list",
            "relative": "markdown/list.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "quote",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/quote.md",
            "directory": "markdown",
            "href": "/markdown/quote",
            "relative": "markdown/quote.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
        {
          "extension": ".md",
          "folder": "book",
          "name": "table",
          "path": {
            "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/table.md",
            "directory": "markdown",
            "href": "/markdown/table",
            "relative": "markdown/table.md",
          },
          "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
        },
      ],
      "folder": "book",
      "index": {
        "extension": ".md",
        "folder": "book",
        "name": "index",
        "path": {
          "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/index.md",
          "directory": "markdown",
          "href": "/markdown",
          "relative": "markdown/index.md",
        },
        "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
      },
      "name": "markdown",
      "path": {
        "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown",
        "relative": "markdown",
      },
      "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
    },
  ],
  "files": [],
  "folder": "book",
  "index": {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/index.md",
      "directory": "",
      "href": "/",
      "relative": "index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  "name": "",
  "path": {
    "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book",
    "relative": "",
  },
  "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
}
`;

exports[`getMarkdown > should get markdown from template 1`] = `
{
  "content": "
# Description

Hi I am a template demo
for YAML.


Templates are preprocessed, so you can use snippets aswell.

:smiley:
:smiley:
:smiley:
:smiley:
:smiley:


# Embedded Image

![Embedded Image](data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAMCAgICAgMCAgIDAwMDBAYEBAQEBAgGBgUGCQgKCgkICQkKDA8MCgsOCwkJDRENDg8QEBEQCgwSExIQEw8QEBD/2wBDAQMDAwQDBAgEBAgQCwkLEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBD/wAARCAEAAQADASIAAhEBAxEB/8QAHQAAAQQDAQEAAAAAAAAAAAAAAgABAwQGBwgFCf/EADgQAAEDAwMDAgQEBQQCAwAAAAEAAgMEBREGITEHEkETUQgiYXEUMoGRFSNCocEWM1Kx0fAkcuH/xAAbAQACAgMBAAAAAAAAAAAAAAACAwABBAYHBf/EADIRAAEDAgQEBAUEAwEAAAAAAAEAAhEDBAUSITEGQVFhEyJxgQcUocHwMpHR4RVCsfH/2gAMAwEAAhEDEQA/AMojpD3FejT0rjjOcYV1tvIk3wvQhohgbhc/NYlOIeRsqENIRuRlehDSYxsrcVGOSf7K7HStwBlAXOKUWu6KjHS45yrcUCstpRvurDKYADdTzFAWOVdkO+ArEcG26sMp2jyVM2BoHJVhrkJaVXEI22UjYRz7Ky2nHuVI2AY5RBjlWUqu2HOEQiAHCtsgCL0W8ZRhjlWUqmIhn/pE2Ib7K16AHlE2BvG6MMergqBsWcHCma0cYUzYW7bohCB7pgY8KQVD2txwnDW+ym9FqYRNHkpgD1UFRdrcIg1uUfojnJRemM+UcPVwoixqYsbhT+m3ndMYm+Mq4epBVYsbuU3a1TmJuPKb0m58qeZXCrOY0g/VCWN2Vn0mjKF0bc7BTzK4VYsbggKB8bceFeMbd9lC+NuOFPOigrz3saM5VCsYHMIC9h8bTnZV3QxnOWBUQ6EYBWMzUgcSd1UdSbHbdZU6liJPyBRmjhx/tjZKIcFkNleGYMPJxwpomHYEKeSMCR30RRx75wvKaUU6J2NOeFaYwlowmhZjJPnyrccYDQMJwS3FRsjKmYx2yNrFPHHwmApZKaNilbH9FIxilYzbhG1LJQNjzhSNj24UrGKUM2TQEJKhbGcojGfKnbGM8J+0YTAEMquI+ETYzgqdrN0XYjAUlRNYnDVMG8J+0bo1JUPYdkuxThmyftwiVSq/ppdu6mLEuwZ4VqKHtPam7Cp+3bhLt3VqSq/Z8p2TFnurHaMbpnM3VKSqhYd8oHNPKtOb7oHNVopVXt5QPjKtdg9kLmqQrlUHswT9VC+M+Ar7meFC5mVSa0qk6Mjx91GY+Vcc33UYZnwlOTmleLMB3HdC3dSzs+d26GNmcBeMwSiU0W5VuMcKCJhyrccZOMp4AS3FGzkqZmdsJmRfTZWI49gmABJJTsBO2OFKwHATsZvlSMj8lNa1ASnbyiHCcNCIM2TgEEpMzn3Rc5RBvsgBf39pbsr0boojHhEMpwxEG7lNAVEocHlOEXan7dkQbCkoQnKINwl2IwFSj+6W+c5R9qfsVhqkqPGyW+VJ27Ju1FlUlRcJjypOxCWqQpKiOd0DgpuxMYyplRSoMFC8Kx2IHMUyqSqj28qJwVx0fghQujwgITgVVeMcqM5VlzNzkIOxLcE5pXiTsHcfqlFHkhHNu85RRgjHsvEaFc6KWNgyrcbBsoImq3GM8JwSyUbWqZrduELQBlTsAwCmtCUUbG/RGG4CTAjA2T2hAU3nGEbR7pNbuiA2TGhCnaEQaEmtypMeya0KpTBqcNT4TgDdMAVJg1OGogOE+EYCkoe1Lt84RYT43RAKpUfanwPZFjZPjdXCpRlowkG74RY2SxurhRAWpu1GQkRurhRREclCW8KQjlMRwFIVqPtG/CFzdlLjlC4ZQkIgq7m87KJzVYcN0Dm+yAhMBVZ7fKAMVgjlB27pRCeCsdlHzFFGMY+qeVpDykwLw2hHyViL3wrcY4VaMY2VqMHATmoHKVo52U8Ywomt9lMwJzQkkqZuEQ/shb7I09qWU4RBDjdG3hNaFRRt5RIW8ovBTWhCnCdJOAjCidOm+yce6MKk+OEscpJf3RhRN90vOUsJ/KtRN4S8pH6pK1E3hI8pzwQmUhUgI2KYjhGfKE+FUK0O2+UJCL3THKohEFE4blRke6mKAjZAQmBQkb7IQ1GRuhCUU4LH5fzH2TMb7cppT8xCJhzgALwmhMjRTxN3yrcfhVo1ajGwKc0FA4KZgUzRso42ZPKtxQEgbhPaElwTNG6MD2Xga/1vYOm+nptQ3+pxHHhrImYL5Xn8rWjySufrb8cFvfdJm3bQtbS2qCQMkqmSiQxB35S4AY/TKyaVN1QFzBMI2W9SqJaF03V1lLQQuqa2ojgiYMufI4NAH3KhtN7tF6YX2q409U1vJhkDsfsuR9ddXXdX9TR0VnujYbJG5scBc/sjcTzI7/r6YR9PtYxdPtaxVE9waaCJ72VL2PzG+MA5cPcbZWAL1zauRzY/6uhUPh3VqYSb59WKmXOGxpG8E9SuxuDuq9zuNFZ6Ga5XOqipaWBpfJLK4Naxo8klcBaz+Jnqx1K1hVHQtZWUFvpe98FLSnBEbNy95HJxufAWLdSPiZ6g620RS6JvcpdG2XunqWkh0wA+VrvffJ/QLYGWNw8taAJO+uw7haOMNdpmPqvoLpfqjoPWNU6i03qWirp2cxxv+Y/YHn9Fb1D1A0dpWpipNQaioaCef/bjmmDXO+uPZfNDT+ubdoSLT190ZXVR1BHJ31jXsHpDDz2tBzk5bzwvCvmvLx1U6hS3fVd5FO+uqu0ySE+nTszgDA8NH/Se3D6rnE7NHONdOyccMbnAkx9V9Zqe4UlVSsraeojkgkb3Nka4FpHuClRXO33AubRVkMxZz6bw7H7L54dNesetbTBN0wZefxNodVdsVSHH8oz8rTz2uxnH0+q3wNWzdPLANTUFS2aqjjc405zueAD75Xj3txUsqrWFszstZv7v5O/ZYhs5o123MDRdOuqYGSCJ88bXnhpcMn9FFdLnQ2WikuF0q4qanjGXSSOwAuL7Tq28aoram+3XUD4KwsdPG97nYLhuGNxx9E+s+qOrdVUdDYbpUmSCmcXFzdjIQMDu98b/ALrCOMOksDIPquxM+FtwalIGuMpjPpESJ8s6O6LrbT+v9J6lnNLaLzDNM3+g5aT9s8rXGvfit6Z6D1LLpesmqqyqpndlQaZgc2J3/Eknc/ZaKiuNLbbF/ELdcKiC7RS/KGjHaANnZ98+FzFdLpW2/VVRX3xgq5nVJmmbMTibLskn6H/K9LB6tTEy/Ppl6c/3lYHEXBlvglZppvLmOkQ7QyOfKRrovqlofqNpjX9GaqwVzXvY0PkhfgSMB4JHt9Rsju3UHTlorv4fPWd87dntjHd2/dfMzSvWzVGjNVu1FpWd9Ox0ckLaQyufG2IjZgyeBgEfYLprp5rCz3CwU13rK9ldWVrHOeHSfM1xHJ85zlHifzVgwPA0K5pjxfheU0hM9dh/PZdO3PXWnbXaG3ieuZ6Mh7WBu7nO9gPdULJ1N09ep207XyQOecN9UYB/Vcw63h1kLhSXdlqrn2eDuMpaxxa0nHzY9sDlZFZNQ2t9AyJpaaguDmS9+3b7YXk/5Ks4NewgzuBrr9lr9XF7mm5hdTygjnMn0+y6qBBGQchLHC8vS9RJU2GilmeHvdC0k5znZep7L3mOztDuq2NpkSmxymLcBHnGUJOw2VlEFERuUDuFI47lRuQFMCjcEICM8pglkJoWLybuRx/RDI09xARMGCAvBaslWWFW4iMDZVIxurkI4ynsSnK1CQvQpyMDZUYGjuV8/JA4x/m7Tj7pxIa2UsrkT463zUVJQVNVeGx08jv/AI8DXfP6o8hv2PK4ypb7eZ6KuoYK6sNPVkPqI2u+R5Z+VzmjnC3L8XFRqW/65mqbx6oit5dDHE7OGNzyB9fdap01Tamlpqul0dTVz2VkHo1To4/zMJBLSccbLacIpso4c15I1M67DXqvWoVKdvSzVHAdyst6efiqelgjp5A+CUdwcXAlrs4Ix43WwblRR1drqIPmEksTow4ngEYWt9L2+6aHMrL3SSQuc4PxIMft7rZjbrdNWw+tQUsWWQhrA1ojGAMA4C1XFs7LvxqcRO673w1dW2I4K2hUfmbBDhOoHIabryeh3QLXOpaiqrG3V1ktzg+mknbkvqGHZwaMjY/Vba1R8Gdmbo2qp7Bc5p7p3GYS1IGHYGzcAbb53+q2Z0XuFAdM0dJH2NngYGSsB3DvK2JqbVdr0vp+put1kZDT0zDI5xG524WnYhxZi1S/PhOywRAA3jbuVxvE7M0Lh1EA6ExK+UT7VdLRfn2GtLqWohndA/1D29jwcHJ8bhZBY+mdbc+ptHoiWtp/UnnaySamlEkbmYDiWuGxOMqbqDWSdR9e37UdktcxZJNJUvbEC7sYNi44G31K2F0I6V3i4Xaxa30vcYax8NU6Kojkd2up3BoJ7vcEHwus32Ivt7E3FRwY/JqOjiJGvqlCAQHrsjR3SDRWnrBBaKbTtJJFEwEuliD3E/8AIk75yq116Z6NrHvtklJNK+WRshDpndsTB4aPqVntEyvNNDAIu6Vzdw07Zx9Vr9l9rbbqyrF6j9Bvq9rQfDcAA/2/uuE0Lq/fnrB7jM6nWT27rGZh9C6rZ3NBc3UdUr70R0nU2WWCy0LbfWdhMUrHOx3eO4Z3CyDRukLDRWOGzuoqWcCMNlL42nvdjcn3OVS191f0fobTzrpeLnEMMIiijIMkh9gFpbop8SVnvmsP4FWiWkbWyO/DOlcCCcktB9iQm0MPxK+s314cWM1n/sei9r5y+uLb5erVdDTIBPPtz9FlHWu0aN6MaeuGs6G0mquVUfQt9NP81NA9w+Z/b5wMkA+VxNcKS93q1yavuNG6WifUeg6Ys+UPIJ7R4BxvsvoV190XUdVdDmwWF0D6tszJo3Suw0EAg5P2JC4equmustPXmbRWrGz0dHTPEzomvzHI45w5vg5HldA4Nxa3bYnxXgVWnWdy0dFLQXmN3Dbdzi+o7QZjOg9dgP7WF6F0zRalvz7XLf6S1U+XltVWZDNuAcb7rb/wxWuhqepRtdzrTKy3lzog1/8AJlcDgEDz7rzpOllimow2jbNRukfvPkuAPnIXQGjPhz07pm9Wqv0xqeepP4Zk9VMGDL3OwWlv/HPtvt916WOY7bXFjVIeRmEDTY9fdZGL8P1cGqsp37ZDpgjUAj231G66IbSU4oiJI2FhadjjGF85euVybB1VuthsFzlord+M7C3vLY43Z+bGPGcr6JTUMxthp/xEjQWdveDvxyuB+rnSN8PUCupv4zHI8yl0j2DvLy75t/rvutK4Fq0bW5q1a7oEaD7/AMLzMNwl+L3IpUKed41HbvJ2W8Pgp1pf6m73vRlfeprnQ0je+me57nsABxlpI2B/yF13wucvhF0np7R9rrLc6OZl/eA+Uzs7S6HwW/T3XR3sujNqsrzUpnQ/n9rXcct6lpfPpVWwR9e/cHqhQnhSY5QuBwrK8oKJ2xKjPClcN1G4ICmtUZ3TAIyN0mt2SymrGJBh2ETN8JSjLiMfdOzwteaU7kpox5yrcbTsq8Q3V6BucZ2WQwoHKeCNx4Kqal1NatH2ae93qsEVPTt7neS72AHkkr1IG7LmD4q7lefx8FsdK9tG6Pva3w5wcFKlRwc1jdysvDLVl7eU6FQw1xAPpK8XqX1L0Z1KhqW3Hp/FO0scKepM5bMNticD+2ViXSq5WG2UsMD4ImRNyySJuAW77j7rwrfeKGls9RT1ETDM8sLJS78gGcj9dl4toqbLU3SSemDo2lwEvz92XA7kD/3hKZVcaNSm8GPoumcUfCyyxc0KWHu8KDrJzSI3AJ35cltTXuoLazQ9wt/8Mp6tk0gZDM+MOdFkHOD+xXgaBn07QUVaLm2q9R1KW0joXhobLyC73H0VN8lmvl7nsdq9f8C4B3bK/Lmnbc42zz+69y/aRtFlsUdUz1qcROaC4OLu4EgYIP3G6w3NPhNpmZcV4+EY3gvw+un8OXtVz3OynOBBE6hrtTB2Gk6brLeg96giu9yoHj53yMc1x8jC6FuNmtGo7LUWy7U0U9PPGWPje3IcCsa6b2qzR2Ckio6WBvdG3JDRuce69fWdZW6asVXcqGndO6njLvSHJ2XP7+sbq7zUmwZA357AzyWFjV6zFL2pVAy5ivnP1U0vcelnUi+afsdxlpaR7nRxujkIdJA8A9hxyBnBzzhbj+C6qp7fX3WjqpmOkqix7HZxnGxGFo3XV4uN111UXnUbTUTST98jM4BbnOPpys86DMk1R1dL7DG62UGXVJiieXenGCMMDjzzyuw4zRfWwN1O4drkBc7qRHvqsei0A5Tsu8dT6ng0rp6a/ANLqVgc1p/qfnAH7lc2S3/VWs62v1FLUvnfE0yyAbNjjzjYeBuF0dXWG23ywy2u5x+tDKztIJ3+hH1C0FprpnqWuuNyoaE/haSCaSmM0hIEwa72HI2+y5XhN3Tp0XtqGCDOu3T91t/BtxhlrTrvuS0PEauE+XmB/XZc0dXa+W66hZSvc5hija4R5J9QnOcH9NvuqYp6e73myw6LsFdFPSQRNqSwue98+fmfgD5R9Poug+rXwuVlTb4LtQXCOWsYWslJaW4y7Ax7jfyt59HemFk0Rp+ltlDStdP6QM87h88j8bknn32W+1uLbS2w6l8uM79RlG3v9lq+J1qJuqta1PkzGN9vzqvb6ZUIp9J21k7nh/4dpf357u7G+c+VpP4mqihGqbdE0D1m02XuA4HdsD/dbY6p6srNFUdHUW90LRPN6Unf4BHIWCtt9Dr4msvrKepfHGf9z2znAWjYTbPNX/IvHlM+uv8AC8ujxdR4XxKneVGl51MDpsdStX1OsaOTR8OnBbIInwzeq6ox87/oStg9FdWG1CS03fujklkBh7yckEDAx/0uZuu1JNp3WDrNaa6QUcrWyCMO/JnPy5/RZx0R1vdrBebVpLWNI30S5lXRVEzP5rY3tOAD/wADyFt9/gZqYaa4M5hmjnot7xHivD+IbVtKwpkMec5Lt5OpjddufiJaymaxm+2AOB+q5F6yaevuiL9Wahu0D2QTVLpmy9pLdzkYdwV17Z6qjlpmvADmuGxBXPvxr1VXJ07p6C3GRzJaxvrNbx2gE8/fC1Dht7X37KD9S8wTOwC17A8buMBuTUoNEHQg81hPQv4htMnqEbjrG51bXzs/Dx1LmAxtccAB2OB+i7hhlZNEyaJwcx4DmkcEFfJXp3Pfavv0JbqWjcL3VQtL3NaZWua7bsd4yTuvqvpG2TWbTFqtVTKZJaOjihe4nOXNaAf+l2I2tOzPh09t9/QT7/Za/wATXj8QuBc1QA4iAAIAA2gcoXq45TEZ8o/dMfCpa0FCQgI2UxCDtSymhQkbomjZORyna3YJZTJWLS8lJuwG6eTGSSEzdsLXmhOEqzCCr8G+FRiOFdheABsnNQlenTlaw+Ii26NqNFzVWpS6OWJpNNJH+cSY2AWy6eX6LW/xCabt+pNA1r624sovwbDO2R52Baqr/wCpO0j2RUA41Whu88t18x7rf6+urpWPqJWt7yGt7jsM8L3KWxajtOmm6xhqYRRvn/DntnaXh+M7tznH1wvTq+l89zqX1lNXxguPcG9hwViuq7LqO2MBr6f04S52JGNIY8jwDwcLd6Ve1vIo0HDuI+i3m9w/FsLa26ug5s7GfpM6LNNA64t2n66a4XWpkLp+0nt+YkjOVuSo6m2jqdY/9I2gl1wdA6OGEs7HPO52Pkrj+CtdC9vqDuAPGVn9v11LQ3vT12oNPwW2a1ljmPh7gal7Xgh78nc+Nli4lgjKjhUaDmG3QRtotHu+H7e/unXlVzs7jJ15jrp912d0O1hXwws0zdBK6ophhpLCHADlrh9FlvXHXNRpzSLoqXu/EV7vRacH5W4yT+w/up+ntwotRU0OpooYWSXBomk9MAAEjj9OFm2rtM2nUWnqi31cbKiOaIjtI+ZrsbELht4+mcQNYs8oOonv09eS2i2rstbmk+5bMESPT891xRaNO02rqxlC+3Q1lRO7AY8DLz7Z2Xs9LbTRdP8AqYBaaCcsq3GmfCR88ZzxzwMLEdX1Fb04vApL3FPRyhxLe5hadjyPf7q70w6mWip6lWqeeoDmPLml7j/Wdhz+v7reatrd1LWoWAmmWnrC6vjlXCMQtDcU3szBvlA/VP3BHbTddr1dVWw2l9RRUhmmDMtjzjJR2J0TIWl7QC7d338q7Q1lLJbmyNIPy92c7YXOWseo96dquvtun7pKynM5a0MI5GxwfbK5xZWL7tzqbNI1n7Lm+C4NXxyq63pQI1JK3lrrUVDarPUEuj9aRpEMbnfmd4WLQ9UrZYbG663dzomwty4MBdv4AWjtZVWqqK4Usmop6syQBsnpPdkmN3nH23Xq6r1tZrl04qqBkEQqY4ZAJAPndkbAj7rZ7Xhum+g3OZJOsaR2Wq8TPvuGcUo2Ja19J4BBEnNJjQjaFBrPqRXdQ60d7Gx0TCfRiIzt7k+68i1ahvNJeqCzUU0bIKp5Y9zju3AJ2/QLwdC32ktNTS19fb2Vccf54JSQHbeV79NpBuraGe/U18oLc+jqx6EU1Q2N8jiCT259she3bW7LV/ggQwSOvuuy8Z8NYdc8OvpC3Eta0scAJzH019Z017Kfqp0PoNT2SbVNBJO27sa4scZMtlc0Z7SPH6LBuh1sueo9c0zNfMqZTTUbaKjbNlhY1pGPbIDe4D/7BZlVa41VpO5CyV9JEHwhsjZHuD2vHg4BIIP3R1981LNdKLV9ykZ69UAactaxo7WuxgNbwM+6y33lxStX2jjMjynpPQrmvA3BGNVbI17khtI/oDneYxvlgbadtl1xZLbS0tC2GlY1jImgBo9lz58bVRcaTp/Q01DK0UstZ/Nja3cntJBz7f8A4tvaFut4udngqrhTthkkaD2h2dlgnxCU8L7PQSV1C+oeyqBY8/7bD7EfZaLw+XW2LUzOx1E7/n9rBvHGyLnv1yyf2XFNhtt0baaJtJpKuhuJrGzNuZEgAZgYaBjA33yvqXoaa4zaQs0t2J/GPooTPkb9/aM5+q5q0nBSyWx9cauNklP2lkeM930XRehNQG/2KKolAEkf8t+PJHldWo4l85VyOEET+fwtNo4+7F2+HUYGkajXlssmykTso+4kHZInjdZplZICcnJQE7Ji5D3oSmBJx5wiYfCi7tyia4coCjCxib8yeMZIRTs+fhKMjZa20rJGynYN1ciHCrRjJ2V2FnGye1AVagGPC52+L46hprFTVMMr22kEtqe04GT+XK6OY0MY5+OBlcF/GZ1Rvd7vEOm2hzbZbKrL4QcCR+NiffG+E+1ofN3dOiPX2/NllWFR1G4bVZu0ysD0f1Dt1pq21L2wVPpgtMVQzuY7II3Cw3qHr9l7hZYqWBhp4p3S9+N8loBA+nH7LxZaGnuFlq9TQ3Cmpp4amOMUQOJXBwPzgeQO3f7rxK6mqDPHWlju2ZodnG2dsrbrPCLWhceONx15H7re8Y4uuMUtRa1mNExJ6xt/1VnWxks0YMvoteeXbgfVbl6d6Ltk9G2pnEEs0MBk753AbDfDc+d9hysYpIqbW1BpzSFg042O7iZ1PJUMOTUukeOzuHjGcLY8egb/AKK1K/R1bLFK+EN3hd3Z7jsAvPx+7e6jkz5XamOoBiVlcEOsn37qFwwOc4GJEgRufcLeHw8Csc+spmXB34GF4DIP+Jxk7/qujqSBzYWysZkxkEE7jK5J6f1t06c6jlpauknYyodmaOTILCPO63U7r7oO2Qtjr9QU9O92xjc/fP1C5Ditpc1rvxbdpdOxA5/+rE4ow51C+cKQGQ6iOhXJHxo3i9V/VT8HdcelSwtbEBs3tcc5/wDfZaqNut1mr7EbZqGCpfXMjkqDG1w/CPL8dp9zgZ2XQvxd6LZfooOplNdaGqoKmGOOGanlDwAM7bc8lcu2uGCOsiqHlxEbgWuPuF2HAnmthVIO0c0Q4Rz7++q1mk8Zhl5L6YdOrFc36Mht91vE9Q+WLAlZ8pDSNsec4XP3ULSFR091O63uqHyRzfzKaV3L2k8fcFb06Ia+tF+0nQSuqmOlbE1j2l24cBg/3WP9XLpp2/ako6JscNRVW75zJnJjLvH+VyDD/mKeJVKLxoZzCNo2K9q04sfwe+pe1G5mRqNp6a+qx/pRY4L7qQXXXmX0FPTuLWVZyZnYw1oB3wM5/QLB+qGqLPU6tqLLpa1x222UoDSxjcOmdyXOPJHGAtvWehgqqGSqmrIofRYMAnd32C11rrpfeNT3Bl+0tRSSem30al0bchx5bkc8Z4WzUHgvyO0H3XlcN/EajjXE1O6xegGsLYZBkMA1mD76/ssWuNip49NU11huFOZ6l72eg0/zI8DZx+hyvN0X/D5qhsV6rpIYMOL5GN7j3AHG31KhttPeG6o/01eaCanFPvKHNIJH0BWzm6C07VW2SGkohTyuae2SMnLXfX33R1qbrenlqc9fZdNxj4r8P4LetsalVz8wMuYBDJOnrA7Faru8Ec9XFI2qd3hxHZjfs8HP+PovYdYLgbZFc5YJm0bnem2TftLh4CxdtLVWK81NHdHOfLHKWtLv6vbC2a92sdSaeobUxscVFRMPoQkhmXHcuP1+6q4DqWUA6dVtj+JMMtrWndGuxlKoZOZwGhH+o67fUrdnSPV0N4tbYWteZKUNY89u2ce6udY7XXah0TWw26gkqZ2OZIOxu7cOySP0ysc6GxS26ym23CmMNUyRxkB/qydiD52WzNT1tXarBW1dte31BATuMjhaVNO3xMTIAdpHXl7T9FwvHXW1a4qvs4NMzlO4IXKOjLrevxktvkopjEx/Z6hHbn9F1702s7rXp6Jz3hzqjEmxzgY2XNGmnslrDNcQQZH98hA3yTk/5XRPSapmntdRD3PMEUn8ru8A+F0i0qsddiWwe3WFyLCjTF9UAEbx2WdY2THhHj3CYjC94raAoiMoHDZSkcoHN2QpoUR5SHhEQkBlAmBY9Un5ihjPGUqg75TRnI5WstTxsrkR9ldheNt1Ri9lcjPCe1AV6EcjS0tPBGFzL8Rvw43PWVVNqLS0LJ5Jm/z6cu7S4j+ppPldKREKSrYX0cjY/wAxacfdMzOoOFemYcEIcWmQvlNb+ld2o9XyWS/0s9NHTPxJG/YuPtt4XRdD0ztsOnmyVNopzROaGDuYCNwvB1barrbOo9yN5Y9kslS97HScPaTtgr19W6nu1o0o6YCWRjW9sYa0loPAyQs6+vbi+8KHbxt1Wm8Q1rq6uvDGaB+mNpWY9OtOdJOl9vZdbLb/AMfqKqY8tdkO/B5JbgE/l/7wtaXCm1DYtWP1LVj8S+pqhPG8AvHcDkNI/Rer0pronU0Md1JDZpA6Z/8AUQTv+qynUuurfoe4urrbSsqGyufFTNmaHYJBw79F5lwKrrg0z5idPVezw3xteYHibasNc2MrgdzpqeqyvRFZG5t11frKKndcK+mMNHQyty92Tkvc3+kE4Az4yuOepFtqrbraoq9QwyUzaqtc408bNvQzyw8cbLp/QUrbzWNrLzWHuqXd80r9zvyvcu3RSydYblHb5JRFBRSGRtR25Pbxj9f8JuF3bcPuy0iQRBjf2WVU42ucYxPxHUwKbjAA3AA09lw7rjUH86p09p6510mnvxPr00VQ7ceASOM/+F7ulYNGxdMr9VXp3de3zQR25odjt3JeSPbH+FvDr58KI0lLFX6WpqqqoHRgPeG97o3jyQPBWp7V8P8Ar+7Wuqr6SzVEtPTtJy1vOFtjcQsqtu1ufJBEzoZHX15rY6d1TqAklSWPq9bNNaJt1m05QTG+epKayqleexre75Axo845JRVF819paspNRXahmhiuzRNG+Ru07fce6wOs0fcba/EETnvjOHN7CHNcD5CzXSWl+onUe42y0TS11XHRFsdNG7LxE3PAzsAgqW1nScarIh05idz6J1UUryh4dcAsPI/mi3Jc9Vakteh7Zqhlrc6mujf5czjhodkg7c7YP7LMunzrtcoI4IKqZ80vz4a47uxyvU6m9Hrvp7pFpyy0/q1f8Ga51V6Y7iC8lziB5wXFY5oGmvXdFHbfUdsA18ec+y0+5bT8ItAgyf25LlmK4cyzrNNoDlnWN4VPXdtqLXf6e+tDnzyvMFRnJJ22P6YWW6TrmmhkpjRiZ8zQGvOcsOeQtp2zpHbbvZAzUsbzUPcJGOa7D4z7591kmmem1g064PaHVL2/ldKBkftyrFlc16LWlvueitmDXNfLUrP1766fyuV+pkNoqLxaaCnszGV9Ke6pqCME5JwD+43WUaRqLHE1zLqJHYYQwR43d4WyOp/RWo1Ddv8AUWnZ4o6hw7ZYZR8kg/wvDs3RzUTJW/iqJsJ8kShw/wDKXVoVRSbRLTp2WRiVhcXFVhZ5g0AAHb85p9JR1VXdRFbGOcCchuf7Lb9LpwVdE+C7RgtlYWujz4Ki0fouj0zD6n+5UuGHO8D7LJieEdpw5bueLm6bLuQ5e/de3hhuLO0Fs939dlqpnQ2ghuRqIa4mnzkMcz5gPbK2LZrLRWSiZR0UfawcnyT7lX/dNkbL3aFlRt3ZqY1Rtosa4vA1PNOcJil7pisopwQnlAQiJQk7ISmhAQkMJvJSygITAsWqHZfscp4iNtlFKfmUkTsYC1pqyY0VxhVljuN1TjVlhJ4TWlLKtMk9ip2SbYyqjApmHAT2pRVa4ab09eHh10tNLVEeZYw7/tY51F6bWnVmjqjTlup4KPubmL04wAHDjhZk3dOMYRGgx400S3NB3XMujuiuqKKf8Bc7TKx7TgTMe0xnfnnP9kus/Q6vit9Fc7dFLWupzmZkY4H0C6dAGdkixkgw9oI+oVfLOz+K15zfReaMMt2PNQN8x5rkfQ+n7xWvjpqWmmJbhva5ha4fcFdM6E0t/pu3fzsfiJQC/Hgey9+Kkpond0cLGn3DQFNnZNoWYZU8V5kpVnhNCzeajN0pGRzDtlYHA8gjKBtLTshdAyCNrD/SGgBSA7p1n5WncL01gF76GdOL9cP4rW6fhFST3F8eWF33xysj05onTelmFtmtkUJ8vxlx/Ur3M8Jx5VNoU26gKZjESmkiZOwxysDmnYgjZUaTT9loJXTUdspoXuOS5kYBJXoA7BP52TSxjjJGqGEwGyLym8JxymqJeEvKR4TeQrlVCWdk5O4TeCkfCiiXukfCWeU3sorCQTFEhchRIDyUJKIndAUJKaEJ5Q5RHnCHCGUYWJzDD0UedkNQ4d2E0Z42WtN2WTyV2MlWo+AVTjdjhWY3bfdMaUBVphGVK07Ku126la4Y8J7TKUVYaUQJUQciDtk9pQFTA7pwVGHJ8pzShKnDksqMOwiB+qa0oEYKfKDPCQdzumgqI8jZECow7hOHcogqUmdk+dyogU/duiCpGDsiyou7Kfu3RKI87JZQByfKKVUIsgBIlBnZOSopCcn6pA5QE7FLuUVqTKFxQl3O6Yu9yhJRAJHlA7lO47oC5BKYEid0s5CAu3Td3shlNAWI1Eg7sJ43eMqpPIe7lSRvwMrWmnRZEaL0I3b5yrTHYC86N/8AdWo34ATAUBCutdvzthTNIwFUY5TNdsnNcllW2nKIO2UDH7ow7ZOa5AQpwRlPnZRA7o2lOa5AQpQU+UAJ2SB5TQVRCkJ+qQco8lOHJrXKoUuU4PKiDsYT926YCqhS54SzuVF3cIs+UUoUXhGOVGDsiHKKVE+dk+ShzslncK5VIkiUOdil5CuVadLdN7peQVUq0spHgJfRMeAqmUQQk7qMnZSHkoHBASmBASmBTnnhDlAXJjVgkh+c539lLGTt7KGY4eUcTicZWttdoshXYiM8q5Gf7KjGRjlXYjsMlGCgKsNPKljc14DmkEfQqFp8ZUrAOcAJrSllWGnwja7ZRA5P6Ixxv7pzXISFMDujHuogUYOya0oIUvcllBnjCWd04OQqTuKbPKDuSzymByqFJnOyLu5UXcnz7pgKqFIDwjyosjCIO85RgqlICnBKAFFndHKqE/cizuo87cpw7dSVEedks7hAlnGFcqI8pZKDuCXdwVJVhHlMfCHuG6buQkqwETvKA4CYu3QOdshJTAE5O6AkIXOwUBfjygJTQFg0pw8qSI7A5VWR/wAx9sqWF248rW2HRZML0IT4VyIqlFsPurUROEYSyrcZ5KmafoqzHKVpPgpjUsqy1wRA7KIZKMbBOBKEqUHdGDsomndECmtKEhTApZ9kLfCLGAU1qEpd2MJE7piPqmzjlNBVIwUQPIUY3RjymAoUYPunzugCLymAqkYdsizkqIZRDlFKkIs7JwUO+EvIVgqQjDtksoASn3zspKkJZ2Td3CZMqlEAi7sJdyBP4VEogE5duo3OTnbKBwJCElGEDnboCdvdE5pDlGThLlNC/9k&#x3D;)

# Code Example

\`\`\`c
// ...
int main() {
  printf(\\"Hello World!\\");
// ...
#include <stdio.h>

int main() {
  printf(\\"Hello World!\\");
  return 0;
}

\`\`\`
",
  "data": {
    "hide": true,
    "name": "Templates - Demo",
  },
}
`;

exports[`list > should list all 1`] = `
[
  {
    "extension": ".c",
    "folder": "archives",
    "name": "main",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/archives/project-1/main.c",
      "directory": "project-1",
      "href": "/archives/project-1.zip",
      "relative": "project-1/main.c",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "glossary",
    "name": "oop",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/glossary/oop.md",
      "directory": "",
      "href": "/glossary/oop",
      "relative": "oop.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/index.md",
      "directory": "",
      "href": "/",
      "relative": "index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".json",
    "folder": "book",
    "name": "template-demo-json",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/template-demo-json.json",
      "directory": "advanced",
      "href": "/advanced/template-demo-json",
      "relative": "advanced/template-demo-json.json",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "name": "template-demo-yaml",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/template-demo-yaml.yml",
      "directory": "advanced",
      "href": "/advanced/template-demo-yaml",
      "relative": "advanced/template-demo-yaml.yml",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "templates",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/templates.md",
      "directory": "advanced",
      "href": "/advanced/templates",
      "relative": "advanced/templates.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/index.md",
      "directory": "advanced",
      "href": "/advanced",
      "relative": "advanced/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "book",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/book.md",
      "directory": "configuration",
      "href": "/configuration/book",
      "relative": "configuration/book.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "library",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/library.md",
      "directory": "configuration",
      "href": "/configuration/library",
      "relative": "configuration/library.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "page",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/page.md",
      "directory": "configuration",
      "href": "/configuration/page",
      "relative": "configuration/page.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "section",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/section.md",
      "directory": "configuration",
      "href": "/configuration/section",
      "relative": "configuration/section.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/index.md",
      "directory": "configuration",
      "href": "/configuration",
      "relative": "configuration/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "alert",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/alert.md",
      "directory": "elements",
      "href": "/elements/alert",
      "relative": "elements/alert.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "archive",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/archive.md",
      "directory": "elements",
      "href": "/elements/archive",
      "relative": "elements/archive.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "bitflow",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/bitflow.md",
      "directory": "elements",
      "href": "/elements/bitflow",
      "relative": "elements/bitflow.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "bookmarks",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/bookmarks.md",
      "directory": "elements",
      "href": "/elements/bookmarks",
      "relative": "elements/bookmarks.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "collapsible",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/collapsible.md",
      "directory": "elements",
      "href": "/elements/collapsible",
      "relative": "elements/collapsible.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "download",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/download.md",
      "directory": "elements",
      "href": "/elements/download",
      "relative": "elements/download.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "emoji",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/emoji.md",
      "directory": "elements",
      "href": "/elements/emoji",
      "relative": "elements/emoji.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "excalidraw",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/excalidraw.md",
      "directory": "elements",
      "href": "/elements/excalidraw",
      "relative": "elements/excalidraw.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "glossary",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/glossary.md",
      "directory": "elements",
      "href": "/elements/glossary",
      "relative": "elements/glossary.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "math",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/math.md",
      "directory": "elements",
      "href": "/elements/math",
      "relative": "elements/math.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "mermaid",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/mermaid.md",
      "directory": "elements",
      "href": "/elements/mermaid",
      "relative": "elements/mermaid.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "protect",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/protect.md",
      "directory": "elements",
      "href": "/elements/protect",
      "relative": "elements/protect.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "qr",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/qr.md",
      "directory": "elements",
      "href": "/elements/qr",
      "relative": "elements/qr.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "scratchblock",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/scratchblock.md",
      "directory": "elements",
      "href": "/elements/scratchblock",
      "relative": "elements/scratchblock.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "snippets",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/snippets.md",
      "directory": "elements",
      "href": "/elements/snippets",
      "relative": "elements/snippets.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "struktog",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/struktog.md",
      "directory": "elements",
      "href": "/elements/struktog",
      "relative": "elements/struktog.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "tabs",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/tabs.md",
      "directory": "elements",
      "href": "/elements/tabs",
      "relative": "elements/tabs.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "youtube",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/youtube.md",
      "directory": "elements",
      "href": "/elements/youtube",
      "relative": "elements/youtube.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/index.md",
      "directory": "elements",
      "href": "/elements",
      "relative": "elements/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "custom",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/custom.md",
      "directory": "hosting",
      "href": "/hosting/custom",
      "relative": "hosting/custom.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "edugitpages",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/edugitpages.md",
      "directory": "hosting",
      "href": "/hosting/edugitpages",
      "relative": "hosting/edugitpages.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "ghpages",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/ghpages.md",
      "directory": "hosting",
      "href": "/hosting/ghpages",
      "relative": "hosting/ghpages.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "glpages",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/glpages.md",
      "directory": "hosting",
      "href": "/hosting/glpages",
      "relative": "hosting/glpages.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "vercel",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/vercel.md",
      "directory": "hosting",
      "href": "/hosting/vercel",
      "relative": "hosting/vercel.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/index.md",
      "directory": "hosting",
      "href": "/hosting",
      "relative": "hosting/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "code",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/code.md",
      "directory": "markdown",
      "href": "/markdown/code",
      "relative": "markdown/code.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "comment",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/comment.md",
      "directory": "markdown",
      "href": "/markdown/comment",
      "relative": "markdown/comment.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "emphasis",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/emphasis.md",
      "directory": "markdown",
      "href": "/markdown/emphasis",
      "relative": "markdown/emphasis.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "header",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/header.md",
      "directory": "markdown",
      "href": "/markdown/header",
      "relative": "markdown/header.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "hr",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/hr.md",
      "directory": "markdown",
      "href": "/markdown/hr",
      "relative": "markdown/hr.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "image",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/image.md",
      "directory": "markdown",
      "href": "/markdown/image",
      "relative": "markdown/image.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "line-break",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/line-break.md",
      "directory": "markdown",
      "href": "/markdown/line-break",
      "relative": "markdown/line-break.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "link",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/link.md",
      "directory": "markdown",
      "href": "/markdown/link",
      "relative": "markdown/link.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "list",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/list.md",
      "directory": "markdown",
      "href": "/markdown/list",
      "relative": "markdown/list.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "quote",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/quote.md",
      "directory": "markdown",
      "href": "/markdown/quote",
      "relative": "markdown/quote.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "table",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/table.md",
      "directory": "markdown",
      "href": "/markdown/table",
      "relative": "markdown/table.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/index.md",
      "directory": "markdown",
      "href": "/markdown",
      "relative": "markdown/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".ico",
    "folder": "public",
    "name": "favicon",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/public/favicon.ico",
      "directory": "",
      "href": "/favicon.ico",
      "relative": "favicon.ico",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".json",
    "folder": "public",
    "name": "flow",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/public/flow.json",
      "directory": "",
      "href": "/flow.json",
      "relative": "flow.json",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".svg",
    "folder": "public",
    "name": "logo",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/public/logo.svg",
      "directory": "",
      "href": "/logo.svg",
      "relative": "logo.svg",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".json",
    "folder": "public",
    "name": "task",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/public/task.json",
      "directory": "",
      "href": "/task.json",
      "relative": "task.json",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".jpg",
    "folder": "public",
    "name": "test",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/public/test.jpg",
      "directory": "",
      "href": "/test.jpg",
      "relative": "test.jpg",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".zip",
    "folder": "public",
    "name": "project-1",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/public/archives/project-1.zip",
      "directory": "archives",
      "href": "/archives/project-1.zip",
      "relative": "archives/project-1.zip",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".excalidraw",
    "folder": "public",
    "name": "hyperbook",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/public/excalidraw/hyperbook.excalidraw",
      "directory": "excalidraw",
      "href": "/excalidraw/hyperbook.excalidraw",
      "relative": "excalidraw/hyperbook.excalidraw",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".woff2",
    "folder": "public",
    "name": "FiraCode-Regular",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/public/fonts/FiraCode-Regular.woff2",
      "directory": "fonts",
      "href": "/fonts/FiraCode-Regular.woff2",
      "relative": "fonts/FiraCode-Regular.woff2",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".ttf",
    "folder": "public",
    "name": "Montserrat-VariableFont_wght",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/public/fonts/Montserrat-VariableFont_wght.ttf",
      "directory": "fonts",
      "href": "/fonts/Montserrat-VariableFont_wght.ttf",
      "relative": "fonts/Montserrat-VariableFont_wght.ttf",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".hbs",
    "folder": "snippets",
    "name": "password.md",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/snippets/password.md.hbs",
      "directory": "",
      "href": null,
      "relative": "password.md.hbs",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".hbs",
    "folder": "snippets",
    "name": "smiley.md",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/snippets/smiley.md.hbs",
      "directory": "",
      "href": null,
      "relative": "smiley.md.hbs",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
]
`;

exports[`list > should list for folder book 1`] = `
[
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/index.md",
      "directory": "",
      "href": "/",
      "relative": "index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".json",
    "folder": "book",
    "name": "template-demo-json",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/template-demo-json.json",
      "directory": "advanced",
      "href": "/advanced/template-demo-json",
      "relative": "advanced/template-demo-json.json",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "name": "template-demo-yaml",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/template-demo-yaml.yml",
      "directory": "advanced",
      "href": "/advanced/template-demo-yaml",
      "relative": "advanced/template-demo-yaml.yml",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "templates",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/templates.md",
      "directory": "advanced",
      "href": "/advanced/templates",
      "relative": "advanced/templates.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/advanced/index.md",
      "directory": "advanced",
      "href": "/advanced",
      "relative": "advanced/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "book",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/book.md",
      "directory": "configuration",
      "href": "/configuration/book",
      "relative": "configuration/book.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "library",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/library.md",
      "directory": "configuration",
      "href": "/configuration/library",
      "relative": "configuration/library.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "page",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/page.md",
      "directory": "configuration",
      "href": "/configuration/page",
      "relative": "configuration/page.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "section",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/section.md",
      "directory": "configuration",
      "href": "/configuration/section",
      "relative": "configuration/section.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/configuration/index.md",
      "directory": "configuration",
      "href": "/configuration",
      "relative": "configuration/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "alert",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/alert.md",
      "directory": "elements",
      "href": "/elements/alert",
      "relative": "elements/alert.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "archive",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/archive.md",
      "directory": "elements",
      "href": "/elements/archive",
      "relative": "elements/archive.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "bitflow",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/bitflow.md",
      "directory": "elements",
      "href": "/elements/bitflow",
      "relative": "elements/bitflow.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "bookmarks",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/bookmarks.md",
      "directory": "elements",
      "href": "/elements/bookmarks",
      "relative": "elements/bookmarks.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "collapsible",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/collapsible.md",
      "directory": "elements",
      "href": "/elements/collapsible",
      "relative": "elements/collapsible.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "download",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/download.md",
      "directory": "elements",
      "href": "/elements/download",
      "relative": "elements/download.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "emoji",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/emoji.md",
      "directory": "elements",
      "href": "/elements/emoji",
      "relative": "elements/emoji.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "excalidraw",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/excalidraw.md",
      "directory": "elements",
      "href": "/elements/excalidraw",
      "relative": "elements/excalidraw.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "glossary",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/glossary.md",
      "directory": "elements",
      "href": "/elements/glossary",
      "relative": "elements/glossary.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "math",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/math.md",
      "directory": "elements",
      "href": "/elements/math",
      "relative": "elements/math.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "mermaid",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/mermaid.md",
      "directory": "elements",
      "href": "/elements/mermaid",
      "relative": "elements/mermaid.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "protect",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/protect.md",
      "directory": "elements",
      "href": "/elements/protect",
      "relative": "elements/protect.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "qr",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/qr.md",
      "directory": "elements",
      "href": "/elements/qr",
      "relative": "elements/qr.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "scratchblock",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/scratchblock.md",
      "directory": "elements",
      "href": "/elements/scratchblock",
      "relative": "elements/scratchblock.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "snippets",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/snippets.md",
      "directory": "elements",
      "href": "/elements/snippets",
      "relative": "elements/snippets.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "struktog",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/struktog.md",
      "directory": "elements",
      "href": "/elements/struktog",
      "relative": "elements/struktog.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "tabs",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/tabs.md",
      "directory": "elements",
      "href": "/elements/tabs",
      "relative": "elements/tabs.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "youtube",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/youtube.md",
      "directory": "elements",
      "href": "/elements/youtube",
      "relative": "elements/youtube.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/elements/index.md",
      "directory": "elements",
      "href": "/elements",
      "relative": "elements/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "custom",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/custom.md",
      "directory": "hosting",
      "href": "/hosting/custom",
      "relative": "hosting/custom.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "edugitpages",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/edugitpages.md",
      "directory": "hosting",
      "href": "/hosting/edugitpages",
      "relative": "hosting/edugitpages.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "ghpages",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/ghpages.md",
      "directory": "hosting",
      "href": "/hosting/ghpages",
      "relative": "hosting/ghpages.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "glpages",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/glpages.md",
      "directory": "hosting",
      "href": "/hosting/glpages",
      "relative": "hosting/glpages.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "vercel",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/vercel.md",
      "directory": "hosting",
      "href": "/hosting/vercel",
      "relative": "hosting/vercel.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/hosting/index.md",
      "directory": "hosting",
      "href": "/hosting",
      "relative": "hosting/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "code",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/code.md",
      "directory": "markdown",
      "href": "/markdown/code",
      "relative": "markdown/code.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "comment",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/comment.md",
      "directory": "markdown",
      "href": "/markdown/comment",
      "relative": "markdown/comment.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "emphasis",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/emphasis.md",
      "directory": "markdown",
      "href": "/markdown/emphasis",
      "relative": "markdown/emphasis.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "header",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/header.md",
      "directory": "markdown",
      "href": "/markdown/header",
      "relative": "markdown/header.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "hr",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/hr.md",
      "directory": "markdown",
      "href": "/markdown/hr",
      "relative": "markdown/hr.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "image",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/image.md",
      "directory": "markdown",
      "href": "/markdown/image",
      "relative": "markdown/image.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "line-break",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/line-break.md",
      "directory": "markdown",
      "href": "/markdown/line-break",
      "relative": "markdown/line-break.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "link",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/link.md",
      "directory": "markdown",
      "href": "/markdown/link",
      "relative": "markdown/link.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "list",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/list.md",
      "directory": "markdown",
      "href": "/markdown/list",
      "relative": "markdown/list.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "quote",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/quote.md",
      "directory": "markdown",
      "href": "/markdown/quote",
      "relative": "markdown/quote.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "table",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/table.md",
      "directory": "markdown",
      "href": "/markdown/table",
      "relative": "markdown/table.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en/book/markdown/index.md",
      "directory": "markdown",
      "href": "/markdown",
      "relative": "markdown/index.md",
    },
    "root": "/var/home/mbarkmin/Sources/openpatch/hyperbook/main/website/en",
  },
]
`;
